# byfrost

./: .gitignore  CLAUDE.md  LICENSE  README.md  byfrost-workflow-dynamics.md  pyproject.toml
.github/workflows/: ci.yml
agents/: init.py  team.py  uninit.py
agents/roles/: apple-engineer.md  backend-engineer.md  frontend-engineer.md  pm.md  qa-engineer.md
agents/templates/: anti-patterns.md  api-spec.yaml  decisions.md  learnings.md  patterns.md  review-checklist.md
cli/: api_client.py  daemon_mgr.py  file_sync.py  main.py  sshfs_config.py
core/: config.py  ignore.py  security.py
daemon/: byfrost_daemon.py  file_sync.py  server_client.py
deploy/: byfrost.service  com.byfrost.daemon.plist  fly-deploy.sh  setup-bridge.sh  sshfs-mount.sh
examples/: .gitkeep
mac-app/Byfrost/: AppDelegate.swift  ByfrostApp.swift  CLIRunner.swift  DaemonConfig.swift  DaemonManager.swift  DaemonState.swift  MenuBarView.swift  SetupWizardView.swift  StatusBarController.swift
mac-app/Byfrost.xcodeproj/: project.pbxproj
server/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
server/app/: config.py  database.py  logging.py  main.py  models.py  rate_limit.py  redis.py
server/app/auth/: github.py  jwt.py  router.py
server/app/devices/: router.py
server/app/pairing/: crypto.py  router.py
server/migrations/: env.py
server/migrations/versions/: 001_initial_schema.py  3e01fd2e5283_add_hmac_rotation_columns.py  7c55d5f7214e_add_cert_columns_to_pairings.py
server/tests/: test_auth.py  test_devices.py  test_health.py  test_models.py  test_pairing.py  test_pairing_crypto.py  test_rate_limit.py
tests/: test_account.py  test_config.py  test_connect.py  test_daemon_config.py  test_daemon_discovery.py  test_daemon_mgr.py  test_file_sync.py  test_ignore.py  test_init.py  test_login.py  test_security.py  test_server_client.py  test_sshfs_config.py  test_team.py  test_uninit.py
